# fast-api-nuxt-template

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: frontend_ci.yml
authorization/: admin.py
authorization/factories/: __init__.py  admin_factory.py  user_factory.py
authorization/migrations/: 0001_initial.py
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/database/: config.py
catswipe/: .env.example  asgi.py  settings.py  urls.py  wsgi.py
core/management/commands/: seed.py
frontend/: Dockerfile  nuxt.config.js  package-lock.json  package.json
frontend/.github/: dependabot.yml
pages/: urls.py
