[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Bradley Marques <bradleyrcmarques@gmail.com>"]

[tool.poetry.dependencies]
aerich = "^0.6.3"
asyncpg = "^0.25.0"
fastapi = "^0.76.0"
pydantic = "^1.9.0"
python = "^3.9"
tortoise-orm = "^0.19.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"

[tool.aerich]
tortoise_orm = "app.database.config.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
